fix display overflow issue

--- a/TOP-C-Assets/TOP-C-MainCss/style.css
+++ b/TOP-C-Assets/TOP-C-MainCss/style.css
@@ -54,7 +54,7 @@
 .calc-head-displays {
   height: 35px;
   white-space: nowrap; 
-  width: 350px; 
+  width: 100%; 
   overflow: hidden;
   text-overflow: ellipsis; 
   text-align: end;
